# memesmithy-bot

./: .env.example  .gitignore  README.md  gallery.html  images.txt  main.py  pyproject.toml  test_web.py  testing.py
src/agents/: tools.py
src/agents/tools/: __init__.py  ocr.py
src/cogs/: generator.py
src/lib/: env.py
