[project]
name = "memesmithy-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.0",
    "httpx>=0.28.1",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-groq>=0.3.1",
    "nextcord>=3.0.1",
    "python-dotenv>=1.1.0",
    "supabase>=2.15.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
]
